src/examples/test-doubles/WsdlStubExampleTest.php.out
./tools/phpunit tests/WsdlStubExampleTest.php
PHPUnit 12.0-gf9a0e9f860 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.4.1

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 23.21 MB

There was 1 error:

1) WsdlStubExampleTest::testWebserviceCanBeStubbed
Error: Call to undefined method WsdlStubExampleTest::getMockFromWsdl()

/path/to/tests/WsdlStubExampleTest.php:8

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
